--- a/beauty-project2/tra/src/main/webapp/tra/sjtystjfxjc/sjtystjfxjc.html
+++ b/beauty-project2/tra/src/main/webapp/tra/sjtystjfxjc/sjtystjfxjc.html
@@ -518,10 +518,7 @@
             <div class="panel-heading font-bold" style="height:65px">
               <div style="display: flex;justify-content:space-between;">
                 <div ><span>重点联系公路运输企业经营财务状况调查数据</span></div>
-                <div>
-                  <p style="color: black" class="pull-left">月份</p>
-                  <div class="col-lg-8"><div sel-date index="financialStatus"></div></div>
-                </div>
+                <div><div sel-date index="financialStatus"></div></div>
               </div>
             </div>
             <br>
@@ -572,11 +569,8 @@
           <div class="panel panel-default" style="height:420px">
             <div class="panel-heading font-bold" style="height:65px;line-height: 40px;">
               <div style="display: flex;justify-content:space-between;">
-                 <div ><span>分航线进出港旅客人数情况（单位：百万人次）</span></div>
-                 <div>
-                   <p style="color: black" class="pull-left">月份</p>
-                   <div class="col-lg-8"><div sel-date index="guests"></div></div>
-                 </div>
+                <div ><span>分航线进出港旅客人数情况（单位：百万人次）</span></div>
+                <div><div sel-date index="guests"></div></div>
               </div>
 
             </div>
@@ -603,7 +597,10 @@
           <div class="panel panel-default" style="height:420px">
             <div class="panel-body">
               <div class="panel-heading font-bold">
-                国际分航线进出港旅客人数情况
+                <div style="display: flex;justify-content:space-between;">
+                  <div> 国际分航线进出港旅客人数情况</div>
+                  <div><div sel-date index="gjfhxjclkrs"></div></div>
+                </div>
               </div>
               <br>
               <div class="panel-body">
@@ -724,7 +721,7 @@
             <div class="panel-heading font-bold">
               <div style="display: flex;justify-content:space-between;">
                 <div> 国际航线进出港集装箱吞吐</div>
-                <div><div sel-year index="gjhxjcgjzxdt"></div></div>
+                <div style="margin-right:10px;"><div sel-year index="gjhxjcgjzxdt"></div></div>
               </div>
             </div>
             <div class="panel-body">
@@ -1066,13 +1063,12 @@
         内河航道
       </tab-heading>
       <ul class="list-group no-borders pull-in m-b-none" style="height: 1300px">
-
         <div class="col-lg-8">
           <div class="panel panel-default" style="height:420px">
             <div class="panel-heading font-bold" style="height:65px">
               <div style="display: flex;justify-content:space-between;">
                 <div> 分叉辅助段基础数据</div>
-                <div><div sel-month index="bifurcationAuxiliarySection"></div></div>
+                <div style="margin-right:10px;"><div sel-month index="bifurcationAuxiliarySection"></div></div>
               </div>
             </div>
             <br>
@@ -1117,13 +1113,12 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-6">
           <div class="panel panel-default" style="height:420px">
             <div class="panel-heading font-bold">
               <div style="display: flex;justify-content:space-between;">
                 <div>  航段基础数据（单位：万元）</div>
-                <div><div sel-month index="hdjcsj"></div></div>
+                <div style="margin-right: 10px;"><div sel-month index="hdjcsj"></div></div>
               </div>
             </div>
             <br><br>
@@ -1155,8 +1150,7 @@
         <div class="col-lg-6">
           <div class="panel panel-default" style="height:420px">
             <div class="panel-heading font-bold" style="height:65px">
-              <div class="label pull-right m-t-xs">
-                临河设施基础数据
+              临河设施基础数据
             </div>
             <br>
             <div class="panel-body">
@@ -1177,7 +1171,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-6">
           <div class="panel panel-default" style="height:380px">
             <div class="panel-heading font-bold">
@@ -1207,8 +1200,7 @@
         <div class="col-lg-6">
           <div class="panel panel-default" style="height:380px">
             <div class="panel-body">
-              <div class="panel-heading">
-                <span class="label bg-danger pull-right m-t-xs">...</span>
+              <div class="panel-heading font-bold">
                 枢纽基础数据等数据
               </div>
               <table class="table table-striped m-b-none">
@@ -1255,7 +1247,6 @@
             </div>
           </div>
         </div>
-
       </ul>
     </tab>
 
@@ -1270,7 +1261,7 @@
             <div class="panel-heading font-bold" style="height:65px">
               <div style="display: flex;justify-content:space-between;">
                 <div> 公路水路运输量月度统计基础情况（单位：万吨）</div>
-                <div><div sel-date index="waterwayTraffic"></div></div>
+                <div><div sel-month index="waterwayTraffic"></div></div>
               </div>
             </div>
             <br>
@@ -1297,7 +1288,7 @@
             <div class="panel-heading font-bold">
               <div style="display: flex;justify-content:space-between;">
                 <div>  高速公路车流量和通行费情况（单位：万量）</div>
-                <div><div sel-date index="tolls"></div></div>
+                <div><div sel-date-single index="tolls"></div></div>
               </div>
             </div>
             <br><br>
@@ -1423,7 +1414,7 @@
             <div class="panel-heading font-bold">
               <div style="display: flex;justify-content:space-between;">
                 <div> 海事签字情况（单位：%）</div>
-                <div><div sel-year index="hsqzqk"></div></div>
+                <div style="margin-right:10px;"><div sel-year index="hsqzqk"></div></div>
               </div>
             </div>
             <br><br>
@@ -1759,7 +1750,7 @@
             <div class="panel-heading font-bold">
               <div style="display: flex;justify-content:space-between;">
                 <div> 营业性汽车运输效率和燃料消耗情况</div>
-                <div><div sel-date index="efficiency"></div></div>
+                <div><div sel-date-single index="efficiency"></div></div>
               </div>
             </div>
             <br><br>
